Correção do timezone default, dump do banco de dados e inclusão dos logs de erro do serviço de hospedagem no gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.log
 *test*
 *Test*
+.htaccess
 private/config/local-settings.php
 private/config/passwords/*
 private/vendor/*
 private/documents/*
 private/logs/*
+*error_log*
 !*.gitkeep
