--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
   "license": "Apache-2.0",
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ],
     "plugins": {
       "cordova-plugin-advanced-http": {
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "cordova-android": "^11.0.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^7.0.0"
   }
