--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "cordova-android": "^11.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-app-exit": "^0.0.2",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-file": "^7.0.0"
   },
@@ -32,7 +33,8 @@
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
       },
-      "com.virtuoworks.cordova-plugin-canvascamera": {}
+      "com.virtuoworks.cordova-plugin-canvascamera": {},
+      "cordova-plugin-app-exit": {}
     }
   }
 }
