--- a/private/composer.json
+++ b/private/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "twig/twig": "^3.4",
         "phpmailer/phpmailer": "^6.6",
-        "league/oauth2-google": "^4.0"
+        "league/oauth2-google": "^4.0",
+        "twig/intl-extra": "^3.18"
     },
     "autoload" : {
         "psr-4": {
